<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mymodule.app2.Buscar">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n3"
            android:id="@+id/Notificacionesbutton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="65dp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n4"
            android:id="@+id/button23"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/Notificacionesbutton"
            android:layout_below="@+id/Notificacionesbutton"
            android:layout_alignLeft="@+id/Notificacionesbutton"
            android:layout_alignStart="@+id/Notificacionesbutton"
            android:layout_marginTop="129dp"
            android:textStyle="bold"
            android:layout_alignRight="@+id/Notificacionesbutton"
            android:layout_alignEnd="@+id/Notificacionesbutton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/n2"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff1923ff"
            android:textColorHighlight="#ff261bff"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n5"
            android:id="@+id/Perfilbutton" />

    </RelativeLayout>
</LinearLayout>

